[gd_scene load_steps=16 format=3 uid="uid://gr128332b5qh"]

[ext_resource type="Script" path="res://scene/player/player.gd" id="1_mcr3h"]
[ext_resource type="Texture2D" uid="uid://cv8moosm7xm1o" path="res://assets/player/player.png" id="1_t3a65"]
[ext_resource type="PackedScene" uid="uid://dc1tqsbchhe2w" path="res://shooter/shooter.tscn" id="3_lkt1d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlqj5"]
size = Vector2(8.5, 18)

[sub_resource type="Animation" id="Animation_c7tew"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_2qaxs"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_a0xu4"]
resource_name = "hurt"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="Animation" id="Animation_4xawb"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_f4uow"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_r6fu6"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kkgx5"]
_data = {
"RESET": SubResource("Animation_c7tew"),
"fall": SubResource("Animation_2qaxs"),
"hurt": SubResource("Animation_a0xu4"),
"idle": SubResource("Animation_4xawb"),
"jump": SubResource("Animation_f4uow"),
"run": SubResource("Animation_r6fu6")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lbwb7"]
radius = 7.0
height = 18.0

[sub_resource type="Animation" id="Animation_2ddwh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h4rri"]
resource_name = "invincible"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bxkm8"]
_data = {
"RESET": SubResource("Animation_2ddwh"),
"invincible": SubResource("Animation_h4rri")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 64
script = ExtResource("1_mcr3h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_t3a65")
hframes = 19
frame = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_tlqj5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kkgx5")
}
autoplay = "idle"

[node name="DebugLabel" type="Label" parent="."]
offset_left = -18.0
offset_top = -107.0
offset_right = 180.0
offset_bottom = -40.0
scale = Vector2(0.193745, 0.371048)
theme_override_font_sizes/font_size = 48
text = "statesed"

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_lbwb7")

[node name="Shooter" parent="." instance=ExtResource("3_lkt1d")]
speed = 200.0
shoot_delay = 1.0

[node name="AnimationPlayerInvincible" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bxkm8")
}

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
